<resources>
  <string name="app_name">ManualLayoutTransitions</string>
  <string name="app_name_part2">ManualLayoutTransitions Part 2</string>
  <string name="app_name_part3">ManualLayoutTransitions Part 3</string>
  <string name="app_name_part4">ManualLayoutTransitions Part 4</string>

  <string name="type_here">Type here</string>
  <string name="clear_input">Clear Input</string>
  <string name="done">Done</string>
  <string name="sample_language">English</string>
  <string name="sample_translation">My hovercraft is full of eels.</string>
</resources>
